--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 </div>
             </div>
 
-            <p class="audio-note">For the best experience, please use headphones.</p>
+            <p class="audio-note">An Audio wil play, prepare for adjustments.</p>
+            <p>Best viewed on a desktop or laptop</p>
         </div>
     </div>
 
@@ -470,12 +471,26 @@
                     </div>
                 </div>
 
+                <!-- Page 54: Your second photo and story -->
+                <div class="page">
+                    <div class="page-content">
+                        <img src="images\IMG_20220830_133710_3.jpg" alt="CHILDREN">
+                        <p>Courtesy of all three of us</p>
+                        <P>We love you mum</P>
+                        <p>thank you to all of you who privided images</p>
+                        <p>thank jesus for the strenght and grace to continue with this even tho there were issues</p>
+                        <p>Enjoy your day mum💕💕💕</p>
+                    </div>
+                </div>
+
                 <!-- Page 56: Blank Inside Back Cover -->
                 <div class="page hard"></div>
 
                 <!-- Page 57: The Back Cover -->
                 <div class="page hard"></div>
             </div>
+            <button class="b1" id="prev-btn" style="display: none;">&lt;</button>
+            <button class="b1" id="next-btn" style="display: block;">&gt;</button>
         </div>
 
         <!-- The background audio file -->
@@ -493,11 +508,8 @@
     <!-- Link to our JavaScript file for functionality -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="text/javascript" src="./js/turn.min.js"></script>
-    <!-- <script type="text/javascript" src="./js/turn.min.js"></script> -->
 
-    <!-- <script type="text/javascript" src="./jquery-3.7.1.min.js"></script> -->
-
-    <script src="js/test.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
